--- a/src/styles/hero.css
+++ b/src/styles/hero.css
@@ -35,7 +35,7 @@
 
 .hero-logo {
   display: block;
-  margin: 0 auto 2rem;
+  margin: 0 auto 0;
   width: 10rem;
   height: 10rem;
   border-radius: 50%;
